<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityConfiguration">

    <LinearLayout
        android:id="@+id/linearLayoutToolbarConfiguration"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBackActConfig"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/iv_btn_back"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvToolbarConfig"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/tv_toolbar_title_act_configuration"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/btnHomeActConfig"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/iv_btn_home"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_home" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svConfiguration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutToolbarConfiguration">

        <LinearLayout
            android:id="@+id/linearLayoutConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMapTyp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tv_map_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupMapType" />


            <RadioGroup
                android:id="@+id/radioGroupMapType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp">

                <RadioButton
                    android:id="@+id/radioButtonNormalMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/rb_map_normal_type" />

                <RadioButton
                    android:id="@+id/radioButtonSatelliteMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/rb_map_satellite_type" />

                <RadioButton
                    android:id="@+id/radioButtonTerrainMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/rb_map_terrain_type" />

                <RadioButton
                    android:id="@+id/radioButtonHybridMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/rb_map_hybrid_type" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:background="@drawable/selector_button"
                android:text="@string/btn_save" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>