<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityChooseProvince">

    <LinearLayout
        android:id="@+id/linearLayoutToolbarProvinces"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBackActChooseProvince"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/iv_btn_back"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvToolbarTitleActChooseProvince"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/tv_toolbar_title_act_choose_provinces"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/btnHomeActChooseProvince"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/iv_btn_home"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCheckBoxOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutToolbarProvinces">

        <Button
            android:id="@+id/btnNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/btn_remove_all" />

        <Button
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/btn_select_all" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxAvila"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_avila"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCheckBoxOptions" />

    <CheckBox
        android:id="@+id/checkBoxBurgos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_burgos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAvila" />

    <CheckBox
        android:id="@+id/checkBoxLeon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_leon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBurgos" />

    <CheckBox
        android:id="@+id/checkBoxPalencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_palencia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLeon" />

    <CheckBox
        android:id="@+id/checkBoxSalamanca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_salamanca"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPalencia" />

    <CheckBox
        android:id="@+id/checkBoxSegovia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_segovia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSalamanca" />

    <CheckBox
        android:id="@+id/checkBoxSoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_soria"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSegovia" />

    <CheckBox
        android:id="@+id/checkBoxValladolid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_valladolid"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSoria" />

    <CheckBox
        android:id="@+id/checkBoxZamora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cb_zamora"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxValladolid" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_acept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxZamora" />

</androidx.constraintlayout.widget.ConstraintLayout>